# anyq

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  benchmark.py  benchmarks.py  build.py  buildsystem.py  find_boost_deps.py  fingerprint.py  index.html  main-print.js  main.js  plot_data.py  plotutils.py  python-requirements.txt  results.py  test-properties.cmake
src/: CMakeLists.txt  atomic.art  concurrency.art  cuda_mapping.impala  cuda_producer_consumer_queue.impala  cuda_utils.impala  demo.art  demo.impala  fiberless.cpp  fibers.cpp  fibers.h  fibers.impala  framework.art  framework.impala  gpu.art  gpu.impala  mapping_amdgpu.art  mapping_amdgpu.impala  mapping_cpu.art  mapping_cpu.impala  mapping_cuda.art  mapping_cuda.impala  mapping_cudaits.art  mapping_cudanoits.art  mapping_fiberless.art  mapping_nvvm.art  mapping_nvvm.impala  mapping_opencl.impala  mapping_scalar.art  mapping_tbb-scalar.art  mapping_tbb.art  memory_pool.art  nvvm_mapping.impala  opencl_mapping.impala  perform-cpu-test.py  pipeline.art  pipeline.impala  producer_consumer_queue.art  producer_consumer_queue.impala  queue.art  (+70 more)
src/benchmark/: CMakeLists.txt  benchmark-bwd-compare.art  benchmark-bwd-comparison.art.in  benchmark-common.art  benchmark-pipeline-simple.art  benchmark-pipeline-simple.art.in  benchmark-producer-consumer-queue-concurrent-push-pop.art  benchmark-queue-concurrent-its.art.in  benchmark-queue-concurrent-small.art  benchmark-queue-concurrent.art.in  benchmark-vectorization-its.art.in  benchmark-vectorization.art.in  benchmark.art  benchmark.cpp  benchmark_args.h  benchmark_atomic_load_store.cu  csv.art  instrumentation.art  instrumentation_cpu.h  queue-benchmark.art  queue-instrumentation.art
src/benchmark/instrumentation/: CMakeLists.txt
src/fiber-test-suite/: CMakeLists.txt  fiber-test-gid-group-wave-thread.art  fiber-test-idx-group-wave-thread.art  fiber-test-idx-group-wave.art  fiber-test-idx-group.art  fiber-test-idx-wave-atomic.art  fiber-test-idx-wave-thread.art  fiber-test-idx-wave.art  fiber-test-suite.art
src/queues/: CMakeLists.txt  broker_queue.art  broker_queue_cuda.art  bwd.h  bwd_orig.h  michael_scott.art  moodycamel.art  patch_cuda_source.py  producer_consumer_queue.art  queues.cmake
src/queues/BQ/: broker_queue.art  broker_queue_cuda.art  broker_queue_cuda_indirect.art  bwd.h  bwd_indirect.h  bwd_orig.h  queue.cmake
src/queues/CPCQ/: producer_consumer_queue.art  queue.cmake
src/queues/MOQ/: moodycamel.art  queue.cmake
src/queues/MSQ/: michael_scott.art  queue.cmake
src/queues/YMCQ/: queue.cmake  wait_free_queue-paper.art  wait_free_queue.art  wfqueue.art
src/rv-test-suite/: CMakeLists.txt  broken-intrinsic-atomics-reduction.impala  intrinsic-atomics-naive_unroll.impala  intrinsic-atomics-plain.impala  intrinsic-atomics-reduction.impala  intrinsic-once-ballot.art  intrinsic-shuffles-2xextract-1xinsert.impala  main.impala  slow-intrinsic-atomics-naive_unroll.art  test-atomics-constant.impala  test-atomics-control_flow.impala  test-atomics-varying.art  test-atomics-varying.impala  test-cmpxchg-constant.art  test-once-control_flow_pe.art  test-once-uniform.art  test-shuffles-constant_value.art  test-shuffles-constant_value.impala  test-shuffles-control_flow_consistent.art  test-shuffles-control_flow_consistent.impala  test-shuffles-control_flow_diverging.art  test-shuffles-control_flow_diverging.impala  test-shuffles-reduction.art  test-shuffles-reduction.impala  test-shuffles-varying_value_dependent_lane.art  test-shuffles-varying_value_dependent_lane.impala  test-shuffles-varying_value_same_lane.art  test-shuffles-varying_value_same_lane.impala  test-shuffles-varying_value_varying_lane.art  test-shuffles-varying_value_varying_lane.impala
src/test/: CMakeLists.txt  test-barriers.art  test-basics.art  test-gid.art  test-pipeline.art  test-producer-consumer-queue-concurrent-push-pop.art  test-producer-consumer-queue.art  test-queue-concurrent-generic-small.art  test-queue-concurrent-index-large.art  test-queue-sequential-generic-array.art  test-queue-sequential-index.art  test-random-number-generator.art  test-ringbuffer-allocator.art  test-rv-atomic-minimal.art  test-rv-intrinsics.art  test-shuffles.art  test-suite-atomic_add.art  test-suite-atomic_cas-reverse.art  test-suite-atomic_cas-uniform.art  test-suite-atomic_cas.art  test-suite-atomic_cas_weak.art  test-suite-atomic_exch-uniform.art  test-suite-atomic_exch.art  test-suite-atomic_inc.art  test-suite-atomic_max.art  test-suite-atomic_min.art  test-suite-atomic_or.art  test-suite-atomic_sub.art  test-suite-atomic_sub_u32.art  test-suite-inactive-waves.art  test-suite-memory_barrier.art  test-suite-scatter_writes.art  test-suite-shfl_bfly.art  test-suite-wave-barrier_all.art  test-suite-wave-barrier_any.art  test-suite-wave-barrier_count.art  test-suite-wave-barrier_vote.art  test-suite.art
src/test/fiber-test-suite/: CMakeLists.txt  fiber-test-gid-group-thread.art  fiber-test-gid-group-wave-thread.art  fiber-test-gid-thread.art  fiber-test-gid-wave-thread.art  fiber-test-idx-group-2xthread.art  fiber-test-idx-group-thread.art  fiber-test-idx-group-wave-1xthread-2xthread.art  fiber-test-idx-group-wave-thread.art  fiber-test-idx-group-wave.art  fiber-test-idx-group.art  fiber-test-idx-thread.art  fiber-test-idx-wave-atomic.art  fiber-test-idx-wave-barrier.art  fiber-test-idx-wave-constant-shuffle.art  fiber-test-idx-wave-shuffle.art  fiber-test-idx-wave-thread.art  fiber-test-suite.art  fibers.art
src/test/queues/: concurrent-push-pop-queue-test-extended.art  concurrent-push-pop-queue-test.art  push-and-then-pop-queue-test-extended.art  push-and-then-pop-queue-test.art  test-producer-consumer-queue-common.art  test-producer-consumer-queue-concurrent-push-pop-generic.art.in  test-producer-consumer-queue-concurrent-push-pop-index.art.in  test-producer-consumer-queue-push-and-then-pop-generic-array.art.in  test-producer-consumer-queue-push-and-then-pop-generic-struct.art.in  test-producer-consumer-queue-push-and-then-pop-generic.art.in  test-producer-consumer-queue.art  (+4 more)
(+50 files in other folders)
